# szczerbatek_aim_assist

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: core_math.py
src/szczerbatek_aim_assist/: air_density.py  core_math.py  example_sim.py  monte_carlo_analysis.py
tests/: basic_test.py  test_drop_solver.py  test_drop_solver_wind.py  test_winds.py
